--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "antd": "^5.23.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
